again, i love repetition..

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <dt>Experience</dt>
             <dd>
                 <h2>Innovation Analyst <span>Ribeirão Preto,Brazil - 2018 - today</span></h2>
-                <p>Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>)</p>
+                <p align="justify">Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>) developing projects as chatbots for IT sector, human resources and end-user experience. Also work with tools as Tableau for data visualization, Alteryx for regression and AutoMate for automatization.</p>
             </dd>
 
             <dd class="clear"></dd>
@@ -71,7 +71,7 @@
             <dt>Education</dt>
             <dd>
 
-                <h2>University of São Paulo  <span>2016 - 2018</span></h2>
+                <h2>University of São Paulo  <span>2016 - 2019</span></h2>
                 <i>Ribeirão Preto, São Paulo - Brazil</i>
                 <p>
                     Department of Computing and Mathematics (<a href="http://dcm.ffclrp.usp.br/">DCM</a>)<br>
