--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <dt>Experience</dt>
             <dd>
                 <h2>Innovation Analyst <span>Ribeirão Preto,Brazil - 2018 - today</span></h2>
-                <p align="justify">Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>) developing projects as chatbots for IT sector, human resources and end-user experience. Also work with tools as Tableau for data visualization, Alteryx for regression and AutoMate for automatization.</p>
+                <p align="justify">Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>) developing projects as chatbots for IT sector, human resources and end-user experience. Also works with tools as Tableau for data visualization, Alteryx for regression and AutoMate for automatization.</p>
             </dd>
 
             <dd class="clear"></dd>
