--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <head>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
+     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+
      <title>Diogenes Laertius Board</title>
 
      <style type="text/css">
@@ -63,7 +65,15 @@
             <dt>Experience</dt>
             <dd>
                 <h2>Innovation Analyst <span>Ribeirão Preto, Brazil - 2018 - today</span></h2>
-                <p align="justify">Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>) developing projects as chatbots for IT sector, human resources and end-user experience. Also works with tools as Tableau for data visualization, Alteryx for regression and AutoMate for automatization.</p>
+                <p align="justify">Work at Bild Desenvolvimento Imobiliário (<a href="https://www.bild.com.br/noticias/bild-esta-entre-as-seis-maiores-construtora-do-brasil">Brazil's sixth largest construction company</a>) developing projects as chatbots for IT sector, human resources and end-user experience. Some projects and technologies that I work inside company:
+
+            <ul>
+                <li>BluePrism software for service center automatization process</li>
+                <li>Tableau and PowerBi for data visualization</li>
+                <li>Alteryx for modeling data and science</li>
+                <li>IoT for civil constrution improving security and management</li>
+            </ul>
+
             </dd>
 
             <dd class="clear"></dd>
@@ -72,7 +82,7 @@
             <dt>Education</dt>
             <dd>
 
-                <h2>University of São Paulo  <span>2016 - 2019</span></h2>
+                <h2>University of São Paulo  <span>2016 - 2018</span></h2>
                 <i>Ribeirão Preto, São Paulo - Brazil</i>
                 <p>
                     Department of Computing and Mathematics (<a href="http://dcm.ffclrp.usp.br/">DCM</a>)<br>
@@ -108,7 +118,7 @@
             <dt>Past Research</dt>
 
             <dd>
-                <h2>Evolutionary Computing<span>2016 - 2019</span></h2>
+                <h2>Evolutionary Computing<span>2016 - 2018</span></h2>
                 <p> Operators of Recombination by Decomposition for Pseudo-Boolean Optimization - Financed by The São Paulo Research Foundation, FAPESP Process Number: 2016/16769-0. </p>
                 
 
@@ -138,6 +148,9 @@
 
                 <h4>Agile Methodologies Skills</h4>
                 <p>Two years experience with SCRUM methodology at the Master position in the Interactive Systems for Autistics project.</p>
+
+                <h4>Experience with Innovation and Facilitation</h4>
+                <p>Design Thinking, Double Diamond, 4x4x4, CDP matrix, Affinity, Decision Matrix, Desk Research, Shadowing.</p>
 
                 <h4> Data Visualization </h4>
                 <p> Tableau v2018.1-2 </p>
@@ -188,7 +201,7 @@
             <dd>
                 <p>
                 <h4>Portuguese:</h4>(Native)<br>
-                <h4>English: </h4> Write (Advanced), Read (Advanced) and Speak (Advanced) <br>
+                <h4>English: </h4> Write (Advanced), Read (Advanced) and Speak (Advanced) with TOEFL ITP Test<br>
                 <h4>Spanish: </h4> Write (Advanced), Read (Advanced) and Speak (Advanced) 
                 </p>
 
@@ -197,7 +210,12 @@
             <dd class="clear"></dd>
             <dd class="clear"></dd>
 
-            <dt>Awards</dt>
+            <dt>Awards, Hackathons and Startups</dt>
+
+            <dd><p><h4>Second Place in Hackathon Liberty Seguros (Campus Party 2019 CPBR12, São Paulo, SP)</h4> With the aim to improve the experience of insurance agent early in carrer, we propose Bert, a web solution with a dynamic CRM and a chatbot. (2019)</p></dd>
+
+            <dd><p><h4>Third Place in Hackaton Elo + Getnet Payments (ONOVOLAB, São Carlos - SP)</h4>With the aim to bring a new customer experience using a credit card machine by getnet, we propose a new solution to deaf people. (2018)</p></dd>
+
             <dd><p><h4>Best Article of the Bahia-Alagoas-Sergipe (WEIBASE)</h4>ERBASE-SBC Education and Informatics Workshop (2015)</p></dd>
             
             <dd class="clear"></dd>
