--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <section>
                 <h1>
                   <span>HI THERE</span>
-                  I’m Diogenes <br> Product Manager + Operations based in Brazil.
+                  I’m Diogenes <br> Product Manager + Tech based in Brazil.
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
@@ -95,9 +95,14 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>Hey! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum ante a porta blandit. Quisque velit tortor, ultricies in quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis justo quis, bibendum tellus. Integer bibendum eget dolor nec venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec hendrerit mi Nulla consequat tempor.</p>
+            <p>Hey you! My is Diogenes I'm 28 years old computer scientist that really love 4 things in the world: 
+              learn about products and frameworks,enjoy a beach on sunset, play tennis (not a Alcaraz, buut we try!) 
+              and last but not least, coding, be games or alternative projects, optimizing proccesses 
+              and complex problems with creative solutions.</p>
             <div class="ds-button-sec text-center">
-                <a href="#" class="ds-button">Download Resume</a>
+              <a href="assets\pdf\english_version.pdf" class="ds-button">Download Resume English</a>
+              <div class="space"></div>
+              <a href="assets\pdf\portuguese-version.pdf" class="ds-button">Download Resume Portuguese</a>
             </div>
         </section>
       </div>
@@ -191,7 +196,7 @@
                       <section>
                           <h3 class="ds-work-tilte">One to many, starting a product operations area from day 0 </h3>
                           <p>Creating and scale a new area inside a company in constantly evolve and with a strong product mindset, dealing day-by-day with optimization challenges and support to product teams, connecting roadmaps and outcomes to company goals.</p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="product_ops_0_to_many.html" class="ds-button">Details</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -205,7 +210,7 @@
                       <section>
                           <h3 class="ds-work-tilte">Implement and scaling product metrics inside company</h3>
                           <p>In a constantly growing company and with the challanger to be more data-based, we discuss new ways to developer a track plan and evolve product metrics focused on user experiences, KPIs and also our Ecommerce popular metrics.</p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="under_construction.html" class="ds-button">Details</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -219,7 +224,7 @@
                       <section>
                           <h3 class="ds-work-tilte">Saving 70% of time from product team with Support Hub</h3>
                           <p>Looking inside a company with a great numbers of service tickets and concerned about how can we optimize the user experience with our service, I discuss how I connect the end-to-end services from CS area to product team, optimizing the time and also increasly the constant feedback for our products.</p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="under_construction_2.html" class="ds-button">Details</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -242,8 +247,9 @@
                    <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                        <section>
                            <h3 class="ds-work-tilte">Featured here & there</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
-                           <a href="works-setails.html" class="ds-button">Details</a>
+                           <p>I've been lucky enough to have my work featured on courses, events, 
+                            mentorships and papers sharing my love for teach and learn about products, people and processes.  </p>
+                           <a href="i_talk.html" class="ds-button">Details</a>
                        </section>
                    </div>
                    <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -267,11 +273,11 @@
           <p>Feel free to contact me</p>
           <a href="mailto:diogeneslaertiussof@gmail.com" class="ds-button">Lets Talk</a>
         </section>
-        <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
+        <span class="ds-copyright">© 2022 All rights reserved. Free bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
      </div>
    </footer>
 
-
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
