--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="ds-header-inner">
               <!-- logo -->
               <a href="index.html" class="ds-logo">
-                <span>D</span>Diogenes Laertius
+                <span>D</span>iogenes Laertius
               </a>
               <!-- logo -->
               <!-- social -->
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
             <figure>
-              <img src="assets/images/profile-image.jpg">
+              <img src="assets/images/profile-image.png">
             </figure>
           </div>
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
