Updating columns style.

--- a/index.html
+++ b/index.html
@@ -116,25 +116,25 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
              <h2 class="ds-heading">Core Skills</h2>
              <ul class="ds-skills-list">
-               <li>Product Strategy</li>
-               <li>User-Centric Mindset</li>
-               <li>Agile Methodologies</li>
-               <li>Communication and Collaboration</li>
-               <li>Data Analysis</li>
-               <li>Technical Knowledge</li>
-               <li>Project Management</li>
-               <li>Leadership</li>
-               <li>Market Research</li>
+               Product Strategy<br>
+               User-Centric Mindset<br>
+               Agile Methodologies<br>
+               Communication and Collaboration<br>
+               Data Analysis<br>
+               Technical Knowledge<br>
+               Project Management<br>
+               Leadership<br>
+               Market Research
              </ul>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Other Skills</h2>
             <ul class="ds-skills-list">
-              <li>Problem-solving</li>
-              <li>Flexibility</li>
-              <li>Continuous Learning</li>
-              <li>Adaptability</li>
-              <li>Decision-making</li>
+              Problem-solving<br>
+              Flexibility<br>
+              Continuous Learning<br>
+              Adaptability<br>
+              Decision-making
             </ul>
           </div>
         </div>
