feat: new icons and a paper.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Main CSS -->
       <link href="assets/css/main.css" rel="stylesheet">
       <!-- Favicon tittle -->
-      <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
+      <link rel="shortcut icon" type="image/x-icon" href="assets/images/home/favicon.ico">
 
       <!-- Google Tag Manager -->
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -47,6 +47,7 @@
               <!-- social -->
               <ul class="ds-social">
                 <li><a href="https://www.linkedin.com/in/dlaertius/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                <li><a href="https://medium.com/@dlaertius" target="_blank"><i class="ri-medium-fill"></i></a></li>
                 <li><a href="https://github.com/dlaertius" target="_blank"><i class="ri-github-fill"></i></a></li>
               </ul>
               <!-- social -->
@@ -60,7 +61,7 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
             <figure>
-              <img src="assets/images/profile-image.png">
+              <img src="assets/images/home/profile-image.png">
             </figure>
           </div>
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
@@ -75,7 +76,7 @@
                     <span>Experience</span>
                   </li>
                   <li>
-                    <strong>20</strong>
+                    <strong>20+</strong>
                     <span>Projects</span>
                   </li>
                   <li>
@@ -95,14 +96,11 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>Hey you! My is Diogenes I'm 28 years old computer scientist that really love 4 things in the world: 
-              learn about products and frameworks,enjoy a beach on sunset, play tennis (not a Alcaraz, buut we try!) 
-              and last but not least, coding, be games or alternative projects, optimizing proccesses 
-              and complex problems with creative solutions.</p>
+            <p>Hey you! My is Diogenes I'm 28 years old computer scientist with more than 5 years of work experience in crafting innovative and sustainable products that really love 4 things in the world: 
+              learn about products and frameworks, enjoy a beach on sunset, play tennis (not a Alcaraz, buut we try!) 
+              and last but not least, coding, be games or alternative projects.</p>
             <div class="ds-button-sec text-center">
-              <a href="assets\pdf\english_version.pdf" class="ds-button">Download Resume English</a>
-              <div class="space"></div>
-              <a href="assets\pdf\portuguese-version.pdf" class="ds-button">Download Resume Portuguese</a>
+              <a href="assets\pdf\english_version.pdf" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
@@ -194,9 +192,11 @@
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                       <section>
-                          <h3 class="ds-work-tilte">One to many, starting a product operations area from day 0 </h3>
-                          <p>Creating and scale a new area inside a company in constantly evolve and with a strong product mindset, dealing day-by-day with optimization challenges and support to product teams, connecting roadmaps and outcomes to company goals.</p>
-                          <a href="product_ops_0_to_many.html" class="ds-button">Details</a>
+                         <!-- <h3 class="ds-work-tilte">One to many, starting a product operations area from day 0 </h3>
+                          <p>Creating and scale a new area inside a company in constantly evolve and with a strong product mindset, dealing day-by-day with optimization challenges and support to product teams, connecting roadmaps and outcomes to company goals.</p> Future -->
+                          <h3 class="ds-work-tilte">A guide to a product manager's tech stack</h3>
+                          <p>As Product Operations, a crucial part of our role in onboarding product teams and day-to-day work is training, maintenance, and evolution of the technologies that the team uses, as well as establishing best practices of governance that involve them.</p>
+                          <a href="produck-stack.html" class="ds-button">Details</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -204,6 +204,7 @@
                   </div>
               </div>
             </div>
+            <!--
             <div class="ds-work-list">
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
@@ -230,7 +231,7 @@
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
                        <figure><img src="assets/images/work-3.jpg"></figure>
                   </div>
-              </div>
+              </div>-->
             </div>
           </div>
      </div>
@@ -253,7 +254,7 @@
                        </section>
                    </div>
                    <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                       <figure><img src="assets/images/i-talk.png"></figure>
+                       <figure><img src="assets/images/home/i-talk.png"></figure>
                    </div>
                </div>
              </div>
