Add MS Clarity to the project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       })(window,document,'script','dataLayer','GTM-MHL797P');</script>
       <!-- End Google Tag Manager -->
 
+      <!-- MS Clarity -->
+      <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "ix5vocdug0");
+    </script>
+    <!-- MS Clarity -->
+
     <title> dlaertius | home </title>
   </head>
   <body>
